feat: Added EmployeeViewModel to include list of files. Made modifications to code first database to include foreign key relationship. Added datetime to attachment filename.

--- a/Attachment/appsettings.json
+++ b/Attachment/appsettings.json
@@ -9,7 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DatabaseConnection": "Data Source=(localdb)\\DESKTOP-4SIM867\\SQLEXPRESS;Database=CleanUp5;Trusted_Connection=True;MultipleActiveResultsets=true"
-    "DatabaseConnection": "Data Source=.\\sqlexpress;Database=CleanUp5;Integrated Security=True"
+    "DatabaseConnection": "Data Source=.\\sqlexpress;Database=Attachment1;Integrated Security=True"
+    //"DatabaseConnection": "Server=tcp:attachmentserverbhj.database.windows.net,1433;Initial Catalog=attachment1azure;Persist Security Info=False;User ID=bobAdmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   }
 }
 //(localdb)\\DESKTOP-4SIM867\\SQLEXPRESS
