--- a/Attachment/Attachment.csproj
+++ b/Attachment/Attachment.csproj
@@ -20,4 +20,6 @@
     <Folder Include="Views\System\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="Mi" /></VisualStudio></ProjectExtensions>
+
 </Project>
